# import-hawkeye

./: .gcloudignore  .pre-commit-config.yaml  main.py  project.env  pyproject.toml  requirements.txt  run-local.ps1  run_local.py  upload.py  watcher.py  watcher.pyw
.claude/: CLAUDE.md  COMMANDS.md  config.md  settings.local.json
.claude/instructions/: 00_BASE_INSTRUCTIONS.MD  01_PYTHON_CONVENTIONS.MD  02_TESTING_WORKFLOW.MD  03_GIT_WORKFLOW.MD  04_FRONTEND_RULES.MD
.github/scripts/: generate_discord_payload.py  load_env_vars.py  send_discord_notification.py
.github/workflows/: deploy.yml
app/: __init__.py  bigquery_loader.py  cli.py  conductor.py  config.py  custom_exceptions.py  detector.py  discord_hook.py  main.py  parser.py  request_handler.py  requirements.txt  transform.py  unzipper.py
app/schemas/: __init__.py  airdefense.py  gps.py  shadowfleet.py  skytrace.py  vhf.py
tests/: __init__.py  conftest.py  test_bigquery_loader.py  test_conductor.py  test_detector.py  test_main.py  test_parser.py  test_schemas.py  test_transform.py  test_unzipper.py  test_watcher.py
tests/fixtures/: sample_airdefense.csv  sample_gps.csv  sample_port_events.csv  sample_skytrace.csv  sample_vessel_history.csv  sample_vhf.csv
